examples/test/testpolicy8318.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8318
  namespace: namespace249
spec:
  podSelector:
    matchLabels:
      key9: value20
      key35: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value42
          key44: value46
          key19: value20
      podSelector:
        matchLabels:
          key1: value5
          key39: value11
          key17: value10
